# cebmf_torch

./: .dockerignore  .gitattributes  .gitignore  .readthedocs.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker.yml  examples.yml  ruff-format.yml  test.yml
docs/: Makefile  requirements.txt
docs/source/: api.rst  conf.py  examples.rst  index.rst  theoretical_background.rst
docs/source/api_files/: cebmf_torch.cebnm.rst  cebmf_torch.ebnm.rst  cebmf_torch.priors.rst  cebmf_torch.rst  cebmf_torch.torch_cebnm.rst  cebmf_torch.torch_ebnm.rst  cebmf_torch.utils.rst  modules.rst
examples/: cEBMF_with_CLIP.ipynb  example1.ipynb  example2.ipynb  model_RNA_ATAC.ipynb  spiked_emdn.ipynb
src/cebmf_torch/: __init__.py  priors_torch.py  torch_ash.py  torch_device.py  torch_distribution_operation.py  torch_ebnm_point_exp.py  torch_ebnm_point_laplace.py  torch_main.py  torch_mix_opt.py  torch_posterior.py  torch_utils.py
src/cebmf_torch.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/cebmf_torch/cebmf/: __init__.py  _initialisation.py  cebmf.py
src/cebmf_torch/cebnm/: __init__.py  cash_solver.py  cov_gb_prior.py  cov_sharp_gb_prior.py  emdn.py  spiked_emdn.py
src/cebmf_torch/ebnm/: __init__.py  ash.py  generalized_binary  generalized_binary.py  point_exp.py  point_laplace.py
src/cebmf_torch/priors/: __init__.py  base.py  learned.py  mixture.py  point.py  registry.py
src/cebmf_torch/torch_cebnm/: cash_solver.py  cov_gb_prior.py  cov_sharp_gb_prior.py  emdn.py  spiked_emdn.py
src/cebmf_torch/torch_ebnm/: torch_ash.py  torch_ebnm_point_exp.py  torch_ebnm_point_laplace.py
src/cebmf_torch/utils/: __init__.py  device.py  distribution_operation.py  maths.py  mixture.py  posterior.py  standard_scaler.py  torch_distribution_operation.py  torch_mix_opt.py  torch_posterior.py  torch_utils.py  torch_utils_mix.py
tests/: generate_doc_examples_test.py  test_ash_posterior_mean_exp_torch.py  test_ash_posterior_mean_normal_torch.py  test_basic_rank1_torch.py  test_cash_posterior.py  test_cebmf_factor_initialisation.py  test_ebnm_point_exp_torch.py  test_emdn_posterior.py  test_gaussian_exp_posterior_torch.py  test_gaussian_gaussian_posterior_torch.py  test_gcbf_posterior.py  test_generalized_binary.py  test_initializer.py  test_point_laplace_torch.py  test_with_NA_torch.py
