[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cebmf_torch"
version = "0.1.0"
description = "Pure-PyTorch Empirical Bayes Matrix Factorization with mini-batch EM"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "William R.P. Denault", email = "wdenault@uchicago.edu" }
]
dependencies = [
    "numpy>=2.0.2",
    "scikit-learn>=1.6.1",
    "torch>=2.0",
]

[dependency-groups]
dev = [
    "matplotlib>=3.9.4",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.0",
]
[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"