[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cebmf_torch"
version = "0.1.0"
description = "Pure-PyTorch Empirical Bayes Matrix Factorization with mini-batch EM"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "William R.P. Denault", email = "wdenault@uchicago.edu" },
  { name = "Deaglan Bartlett", email = "deaglan.bartlett@physics.ox.ac.uk"},
  { name = "Auggie Marignier" },
  { name = "Jiahe Cui"},
  { name = "Thomas Monahan"}
]
dependencies = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "notebook>=7.4.5",
    "numpy>=2.0.2",
    "pandas>=2.3.2",
    "pip>=25.2",
    "scikit-learn>=1.6.1",
    "torch>=2.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
    "transformers>=4.56.1",
    "uni>=0.1",
]

[dependency-groups]
dev = [
    "matplotlib>=3.9.4",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.0",
]
[tool.ruff]
line-length = 119
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
