[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cebmf_torch"
version = "0.1.0"
description = "Pure-PyTorch Empirical Bayes Matrix Factorization with mini-batch EM"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "William R.P. Denault", email = "wdenault@uchicago.edu" },
  { name = "Deaglan Bartlett", email = "deaglan.bartlett@physics.ox.ac.uk"},
  { name = "Auggie Marignier" },
  { name = "Jiahe Cui"},
  { name = "Thomas Monahan"}
]
dependencies = [
    "torch>=2.0",
    "tqdm",
]

[dependency-groups]
dev = [
    "matplotlib>=3.9.4",
    "numpy>=2.3.3",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.0",
]
examples = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "seaborn>=0.13.2",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
    "transformers>=4.56.1",
    "uni>=0.1",
]
[tool.ruff]
line-length = 119
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# For pip users
[project.optional-dependencies]
dev = [
    "matplotlib>=3.9.4",
    "numpy>=2.3.3",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.0",
]
examples = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "seaborn>=0.13.2",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
    "transformers>=4.56.1",
    "uni>=0.1",
]
